Converted ComponentViewModel over to Id and Name; Updated MVCs to match new style; Updated Views to improve intuitive readability and UX.... TO DO: Implement AddIngredient, MoveUp, and MoveDown features for adding / editing ingredients within a recipe.

--- a/Take02/Views/Components/Details.cshtml
+++ b/Take02/Views/Components/Details.cshtml
@@ -23,22 +23,16 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
+            Type
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ComponentTypeName)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt>
-            Type @*@Html.DisplayNameFor(model => model.ComponentType.Name)*@
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ComponentType.Name)
-        </dd>
-        <dt>
-            TypeId @*@Html.DisplayNameFor(model => model.ComponentType.Id)*@
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ComponentType.Id)
         </dd>
     </dl>
 </div>
