--- a/Take02/Views/Ingredients/Index.cshtml
+++ b/Take02/Views/Ingredients/Index.cshtml
@@ -13,19 +13,19 @@
     <thead>
         <tr>
             <th>
-                Recipe @*@Html.DisplayNameFor(model => model.Recipe.Name)*@
+                Recipe
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
             </th>
             <th>
-                Unit @*@Html.DisplayNameFor(model => model.Unit.Name)*@
+                Unit
             </th>
             <th>
-                Component @*@Html.DisplayNameFor(model => model.Component.Name)*@
+                Component
             </th>
             <th>
-                Number @*@Html.DisplayNameFor(model => model.Number)*@
+                Number
             </th>
             <th></th>
         </tr>
