--- a/Take02/Views/Components/Create.cshtml
+++ b/Take02/Views/Components/Create.cshtml
@@ -14,8 +14,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label class="control-label">Type</label>
-                @Html.DropDownList("ComponentTypeId", Model.ComponentTypesSelectListItems, null, new { @class = "form-control" })
-                <span asp-validation-for="ComponentType.Id" class="text-danger"></span>
+                @Html.DropDownListFor(m => m.ComponentTypeId, Model.ComponentTypesSelectListItems, null, new { @class = "form-control" })
+                <span asp-validation-for="ComponentTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
