--- a/Take02/Views/Components/Delete.cshtml
+++ b/Take02/Views/Components/Delete.cshtml
@@ -12,16 +12,22 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ComponentType.Name)
+            Type
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ComponentType.Name)
+            @Html.DisplayFor(model => model.ComponentTypeName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Description)
