--- a/Take02/Views/Recipes/Create.cshtml
+++ b/Take02/Views/Recipes/Create.cshtml
@@ -32,33 +32,32 @@
             <div class="form-group">
                 <label class="control-label">Ingredients</label>
                 <hr />
-                @foreach (var ingredientVM in Model.IngredientViewModels)
+                @for (int i = 0; i < Model.IngredientViewModels.Count; i++)
                 {
-                    <input type="hidden" asp-for="@ingredientVM.Number" />
+                    <input type="hidden" asp-for="IngredientViewModels[i].Number" />
                     <label class="control-label">Quantity</label>
-                    <input asp-for="@ingredientVM.Quantity" class="form-control" />
-                    <span asp-validation-for="@ingredientVM.Quantity" class="text-danger"></span>
+                    <input asp-for="IngredientViewModels[i].Quantity" class="form-control" />
+                    <span asp-validation-for="IngredientViewModels[i].Quantity" class="text-danger"></span>
                     <br />
                     <label class="control-label">Unit</label>
-                    @Html.DropDownListFor(m => ingredientVM.UnitId, Model.UnitSelectListItems, Model.UnitSelectListItems.ElementAtOrDefault(1).Text, new { @class = "form-control" })
-                    <span asp-validation-for="@ingredientVM.UnitId" class="text-danger"></span>
+                    @Html.DropDownListFor(m => m.IngredientViewModels[i].UnitId, Model.UnitSelectListItems, null, new { @class = "form-control" })
+                    <span asp-validation-for="IngredientViewModels[i].UnitId" class="text-danger"></span>
                     <br />
                     <label class="control-label">Component</label>
-                    @Html.DropDownListFor(m => ingredientVM.ComponentId, Model.ComponentSelectListItems, null, new { @class = "form-control" })
-                    <span asp-validation-for="@ingredientVM.ComponentId" class="text-danger"></span>
+                    @Html.DropDownListFor(m => m.IngredientViewModels[i].ComponentId, Model.ComponentSelectListItems, null, new { @class = "form-control" })
+                    <span asp-validation-for="IngredientViewModels[i].ComponentId" class="text-danger"></span>
                     <span asp-validation-for="IngredientViewModels" class="text-danger"></span>
-                    int index = Model.IngredientViewModels.IndexOf(ingredientVM);
-                    if (index > 0)
+                    if (i > 0)
                     {
                         <br />
                         <a asp-action="MoveUp">Move Up</a>
                     }
-                    if (index < modelCount - 1)
+                    if (i < modelCount - 1)
                     {
                         <br />
                         <a asp-action="MoveDown">Move Down</a>
                     }
-                    if (index == modelCount - 1)
+                    if (i == modelCount - 1)
                     {
                         <br />
                         <a id="addIngredient" href="#">Add Ingredient</a>
