--- a/Take02/Views/Recipes/Create.cshtml
+++ b/Take02/Views/Recipes/Create.cshtml
@@ -2,8 +2,6 @@
 
 @{
     ViewData["Title"] = "Create";
-    var modelCount = Model.IngredientViewModels.Count;
-    var addIngredientShown = false;
 }
 
 <h2>Create</h2>
@@ -29,49 +27,7 @@
                 @Html.DropDownListFor(m => m.MixTypeId, Model.MixTypeSelectListItems, null, new { @class = "form-control" })
                 <span asp-validation-for="MixTypeId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label class="control-label">Ingredients</label>
-                <hr />
-                @for (int i = 0; i < Model.IngredientViewModels.Count; i++)
-                {
-                    <input type="hidden" asp-for="IngredientViewModels[i].Number" />
-                    <label class="control-label">Quantity</label>
-                    <input asp-for="IngredientViewModels[i].Quantity" class="form-control" />
-                    <span asp-validation-for="IngredientViewModels[i].Quantity" class="text-danger"></span>
-                    <br />
-                    <label class="control-label">Unit</label>
-                    @Html.DropDownListFor(m => m.IngredientViewModels[i].UnitId, Model.UnitSelectListItems, null, new { @class = "form-control" })
-                    <span asp-validation-for="IngredientViewModels[i].UnitId" class="text-danger"></span>
-                    <br />
-                    <label class="control-label">Component</label>
-                    @Html.DropDownListFor(m => m.IngredientViewModels[i].ComponentId, Model.ComponentSelectListItems, null, new { @class = "form-control" })
-                    <span asp-validation-for="IngredientViewModels[i].ComponentId" class="text-danger"></span>
-                    <span asp-validation-for="IngredientViewModels" class="text-danger"></span>
-                    if (i > 0)
-                    {
-                        <br />
-                        <a asp-action="MoveUp">Move Up</a>
-                    }
-                    if (i < modelCount - 1)
-                    {
-                        <br />
-                        <a asp-action="MoveDown">Move Down</a>
-                    }
-                    if (i == modelCount - 1)
-                    {
-                        <br />
-                        <a id="addIngredient" href="#">Add Ingredient</a>
-                        addIngredientShown = true;
-                    }
-                    <hr />
-                }
-            </div>
-            @if (!addIngredientShown)
-            {
-                <a id="addIngredient" href="#">Add Ingredient</a>
-                <hr />
-                addIngredientShown = true;
-            }
+            @Html.Partial("_AddEditIngredientPartial")
             <div class="form-group">
                 <label asp-for="Instructions" class="control-label"></label>
                 <input asp-for="Instructions" class="form-control" />
