--- a/Take02/Views/Recipes/Edit.cshtml
+++ b/Take02/Views/Recipes/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    var isFirstIngredient = true;
 }
 
 <h2>Edit</h2>
@@ -35,13 +36,15 @@
                 <br />
                 @foreach (var ingredientVM in Model.IngredientViewModels)
                 {
+                    ingredientVM.IsFirstIngredient = isFirstIngredient;
                     ingredientVM.ComponentSelectListItems = Model.ComponentSelectListItems;
                     ingredientVM.UnitSelectListItems = Model.UnitSelectListItems;
                     Html.RenderPartial("_AddEditIngredientPartial", ingredientVM);
+                    isFirstIngredient = false;
                 }
             </div>
             <div class="form-group">
-                <input type="button" id="addIngredient" name="addIngredient" value="Add Ingredient" />
+                <input type="button" id="addIngredient" name="addIngredient" value="Add Ingredient" onclick="AddNewIngredient('@Model.Id')" /> 
                 <hr />
             </div>
             <div class="form-group">
@@ -66,30 +69,5 @@
 </div>
 
 @section Scripts {
-    <script type="text/javascript">
-        var url = '/Recipes/AddNewIngredient/@Model.Id';
-        $('#addIngredient').on('click', function () {
-            $.ajax({
-                async: false,
-                url: url
-            }).success(function (partialView) {
-                $('#newIngredient').append(partialView);
-            });
-        });
-
-        //$('.deleteIngredient').click(function () {
-        //    var id = $(this).data('id');
-        //    var row = $(this).parent('.ingredientRow');
-        //    row.remove();
-        //    $(this).parent('.ingredientRow').remove();
-        //    $(this).parent('div').remove();
-        //});
-
-        //$(".ingredientRow").on("click", ".deleteIngredient", function (e) { //user click on remove text
-        //    e.preventDefault();
-        //    $(this).parent('div').remove();
-        //    //$(this).parent('.ingredientRow').remove();
-        //});
-    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
