--- a/Take02/Views/Recipes/Edit.cshtml
+++ b/Take02/Views/Recipes/Edit.cshtml
@@ -34,14 +34,21 @@
                 <label class="control-label">Ingredients</label>
                 <br />
                 <br />
-                @foreach (var ingredientVM in Model.IngredientViewModels)
-                {
-                    ingredientVM.IsFirstIngredient = isFirstIngredient;
-                    ingredientVM.ComponentSelectListItems = Model.ComponentSelectListItems;
-                    ingredientVM.UnitSelectListItems = Model.UnitSelectListItems;
-                    Html.RenderPartial("_AddEditIngredientPartial", ingredientVM);
-                    isFirstIngredient = false;
-                }
+                <div class="ingredientsContainer">
+                    @foreach (var ingredientVM in Model.IngredientViewModels)
+                    {
+                        ingredientVM.IsFirstIngredient = isFirstIngredient;
+                        ingredientVM.ComponentSelectListItems = Model.ComponentSelectListItems;
+                        ingredientVM.UnitSelectListItems = Model.UnitSelectListItems;
+                        <!-- This outer element is necessary because the RenderPartial outputs another hidden input -->
+                        <div class="ingredientWrapper">
+                            @{
+                                Html.RenderPartial("_AddEditIngredientPartial", ingredientVM);
+                                isFirstIngredient = false;
+                            }
+                        </div>
+                    }
+                </div>
             </div>
             <div class="form-group">
                 <input type="button" id="addIngredient" name="addIngredient" value="Add Ingredient" onclick="AddNewIngredient('@Model.Id')" /> 
