Update rendering and JS behavior to persist edited order

--- a/Take02/Views/Recipes/_AddEditIngredientPartial.cshtml
+++ b/Take02/Views/Recipes/_AddEditIngredientPartial.cshtml
@@ -7,7 +7,7 @@
     <br />
     <input type="hidden" asp-for="@Model.Id" />
 
-    <input type="hidden" asp-for="@Model.Number" />
+    <input type="hidden" class="number" asp-for="@Model.Number" />
 
     <a href="javascript:void(0);" class="moveUp">↑</a>
     <a href="javascript:void(0);" class="moveDown">↓</a>
