--- a/Take02/Views/Ingredients/Edit.cshtml
+++ b/Take02/Views/Ingredients/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Number" class="control-label"></label>
-                <input asp-for="Number" class="form-control" />
+                <input asp-for="Number" class="form-control number" />
                 <span asp-validation-for="Number" class="text-danger"></span>
             </div>
             <div class="form-group">
