--- a/Take02/Views/Shared/_Layout.cshtml
+++ b/Take02/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="~/js/external.js"></script>
-    <title>@ViewData["Title"] - Take02</title>
+    <title>@ViewData["Title"]</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -18,32 +18,11 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Cocktails</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    @*<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
-                    <li><a asp-area="" asp-controller="Components" asp-action="">Components</a></li>
-                    <li><a asp-area="" asp-controller="ComponentTypes" asp-action="">ComponentTypes</a></li>
-                    <li><a asp-area="" asp-controller="Ingredients" asp-action="">Ingredients</a></li>
-                    <li><a asp-area="" asp-controller="Libraries" asp-action="">Libraries</a></li>
-                    <li><a asp-area="" asp-controller="Recipes" asp-action="">Recipes</a></li>
-                    <li><a asp-area="" asp-controller="Units" asp-action="">Units</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div id="banner-container">
+        <a asp-controller="Home" asp-action="Index">
+            <img id="banner" src="~/images/banner.jpg" alt="cocktails" />
+        </a>
+    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
