--- a/Take02/wwwroot/css/site.css
+++ b/Take02/wwwroot/css/site.css
@@ -1,6 +1,11 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿div#banner-container {
+    width: inherit;
+    background-color: black;
+    text-align: center;
+}
+
+img#banner {
+    height: 150px;
 }
 
 /* Wrapping element */
@@ -8,30 +13,6 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-}
-
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
 }
 
 .hidden {
