COC-8 Wire up bulk data import to UI

--- a/Take02/Views/Home/Index.cshtml
+++ b/Take02/Views/Home/Index.cshtml
@@ -20,5 +20,6 @@
         <li><a asp-area="" asp-controller="ComponentTypes" asp-action="">ComponentTypes</a></li>
         <li><a asp-area="" asp-controller="Libraries" asp-action="">Libraries</a></li>
         <li><a asp-area="" asp-controller="Recipes" asp-action="">Recipes</a></li>
+        <li><a asp-controller="Import" asp-action="index">Bulk Data Import</a></li>
     </ul>
 </div>
