--- a/Take02/wwwroot/css/site.css
+++ b/Take02/wwwroot/css/site.css
@@ -4,6 +4,16 @@
     text-align: center;
 }
 
+div#banner-message {
+    width: inherit;
+    background-color: green;
+    color: white;
+    font-weight: 800;
+    text-align: center;
+    padding: 25px;
+    font-size: 2em;
+}
+
 img#banner {
     height: 150px;
 }
